cmake_minimum_required(VERSION 3.30)
project(untitled2)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled2 main.cpp
        Graph.cpp
        Graph.h
        Algorithms.cpp
        Algorithms.h
        Queue.cpp
        Queue.h
        adesenlist.cpp
        adesenlist.h
        Stack.cpp
        Stack.h
        UnionFind.cpp
        UnionFind.h
        Edge.cpp
        Edge.h
        inerNode.cpp
        inerNode.h
        auterNode.cpp
        auterNode.h
        test_graph.cpp
        test_Algorithms.cpp
)
